--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,9 @@
 version: '3'
 services:
   service:
-    image: ${REGISTRY_URL}/${APP_NAME}:${APP_VERSION}
-    build: "./"
+    build: .
+    image: 127.0.0.1:8000/umntechnology:1.0.0-snapshot
+    ports:
+      - "8000:8000"
+    environment:
+      - SOME_ENV_VAR=value
