--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 REGISTRY_URL=127.0.0.1:8000
-APP_NAME=UMNTechnology
+APP_NAME=umntechnology
 APP_VERSION=1.0.0-SNAPSHOT
 APP_URL=http://127.0.0.1
 APP_PORT=8000
