--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 REGISTRY_URL=127.0.0.1:8000
 APP_NAME=umntechnology
-APP_VERSION=1.0.0-SNAPSHOT
+APP_VERSION=1.0.0-snapshot
 APP_URL=http://127.0.0.1
 APP_PORT=8000
 DB_DRIVER=postgres
