--- a/.env
+++ b/.env
@@ -10,5 +10,5 @@ DB_PORT=5432
 DB_USER=postgres
 DB_PASS=admin
 SSL_MODE=disable
-JWT_KEY = UMNTechnology123456@123456789012
+JWT_KEY=UMNTechnology123456@123456789012
 E_KEY=UMNTechnology123456@123456789012
