--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ APP_VERSION=1.0.0-snapshot
 APP_URL=http://127.0.0.1
 APP_PORT=8080
 DB_DRIVER=postgres
-DB_NAME=UMNTechnology
+DB_NAME=umntechnology
 DB_HOST=127.0.0.1
 DB_PORT=5432
 DB_USER=postgres
